--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "movies-explorer-frontend",
+  "name": "hebrew-vocabluary",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
