--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react": "^18.2.79",
+    "@types/react-dom": "^18.2.25",
+    "@types/react-router-dom": "^5.3.3",
+    "cra-template-typescript": "^1.2.0",
     "fork-ts-checker-webpack-plugin": "^8.0.0",
     "prettier": "^3.2.5",
     "react": "^18.2.0",
@@ -18,7 +22,6 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
     "stylelint": "^16.3.1",
-    "typescript": "^5.1.3",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
@@ -60,5 +63,11 @@
   "description": "Ссылка на макет:",
   "main": "index.js",
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/react": "^18.2.74",
+    "@types/react-dom": "^18.2.24",
+    "@types/react-router-dom": "^5.3.3",
+    "typescript": "^5.4.5"
+  }
 }
